add style to login component

--- a/app/draft.html
+++ b/app/draft.html
@@ -32,6 +32,16 @@
       <li>Page Not Found text</li>
     </ul>
 
+    <form class="login" id="login">
+      <fieldset>
+        <legend>Login</legend>
+        <input name="username" type="text" placeholder="username"/>
+        <input name="password" type="text" placeholder="password"/>
+        <input class="button" type="submit" value="Let's play"/>
+      </fieldset>
+    </form>
+
+
 
     <h2>Views:</h2>
     <ul>
@@ -107,14 +117,6 @@
         </ul>
       <li>404 page</li>
     </ul>
-<form>
-  <fieldset>
-    <legend>Login</legend>
-    <input type="text"/>
-    <input type="text"/>
-    <button class="button" type="submit">Let's play</button>
-  </fieldset>
-</form>
 
 
   </body>
