--- a/app/draft.html
+++ b/app/draft.html
@@ -41,7 +41,12 @@
       </fieldset>
     </form>
 
-
+    <footer>
+      <ul>
+        <li><small>&#64; Copyright 2015. All Rights Reserved.</small></li>
+        <li><small>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</small></li>
+      </ul>         
+    </footer>
 
     <h2>Views:</h2>
     <ul>
