Build category button component

--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -31,7 +31,7 @@
       <li>Play Again button</li>
       <li>Page Not Found text</li>
     </ul>
-
+    <a class="cat-button">Category Name</a>
     <form class="login" id="login">
       <fieldset>
         <legend>Login</legend>
