--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -32,6 +32,7 @@
       <li>Page Not Found text</li>
     </ul>
     <a class="cat-button">Category Name</a>
+    <a class="logout-button">Log Out</a>
     <form class="login" id="login">
       <fieldset>
         <legend>Login</legend>
