Build Quit button component

--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -33,6 +33,7 @@
     </ul>
     <a class="cat-button">Category Name</a>
     <a class="logout-button">Log Out</a>
+    <a class="quit-button">Quit</a>
     <form class="login" id="login">
       <fieldset>
         <legend>Login</legend>
