--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -34,7 +34,9 @@
     <a class="cat-button">Category Name</a>
     <a class="logout-button">Log Out</a>
     <a class="quit-button">Quit</a>
+    <a class="to-profile-button">To Profile</a>
     <a class="play-button">Play Now</a>
+    <a class="play-button">Play Again</a>
     <form class="login" id="login">
       <fieldset>
         <legend>Login</legend>
