--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -31,6 +31,10 @@
       <li>Play Again button</li>
       <li>Page Not Found text</li>
     </ul>
+    <article class="q-card">
+<!--       <p>When was Pearl Harbor attacked by the Japanese?</p>
+ -->      <p>Pomegranates are a major feature in the myth of Persophone, wife of _______.</p>
+    </article>
     <a class="cat-button">Category Name</a>
     <a class="logout-button">Log Out</a>
     <a class="quit-button">Quit</a>
