--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -36,8 +36,8 @@
         <h1>TriviApp</h1>
         <h2>mollyfish</h2>
       </header>
-      <div class="q-card">
-        <h1>History</h1>
+      <section class="q-card">
+        <h1>Mythology</h1>
         <!-- <h2>When was Pearl Harbor attacked by the Japanese?</h2> -->
         <h2>Pomegranates are a major feature in the myth of Persophone, wife of _______.</h2>
         <div class="answers">
@@ -48,7 +48,7 @@
           ><a class="answer-button"><span class="letter">D</span><span class="text">San Francisco 49er's</span></a
           ><a class="answer-button"><span class="letter">E</span><span class="text">1945</span></a>
         </div>
-      </div>
+      </section>
       <a class="quit-button">Quit</a>
     </article>
     <a class="cat-button">Category Name</a>
@@ -66,6 +66,19 @@
         <input class="button" type="submit" value="Let's play"/>
       </fieldset>
     </form>
+
+    <section class="q-card">
+      <h1>History</h1>
+      <h2>When was Pearl Harbor attacked by the Japanese?</h2>
+      <div class="answers">
+        <!-- The weird format of line breaks below is to prevent silly gaps between the <a> tags, since they are { display: inline-block }.  Looks weird, but just go with it! -->
+        <a class="answer-button"><span class="letter">A</span><span class="text">Marie Antoinette</span></a
+        ><a class="answer-button"><span class="letter">B</span><span class="text">Birds</span></a
+        ><a class="answer-button"><span class="letter">C</span><span class="text">The Hundred-Years' War</span></a
+        ><a class="answer-button"><span class="letter">D</span><span class="text">San Francisco 49er's</span></a
+        ><a class="answer-button"><span class="letter">E</span><span class="text">1945</span></a>
+      </div>
+    </section>
 
     <footer>
       <ul>
