Build category choice view

--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -10,27 +10,39 @@
     <link rel="stylesheet" href="../build/style/main.css">
   </head>
   <body>
-    <h1>TriviApp is awesome</h1>
-    <h2>Component To-Do List:</h2>
-    <ul>
-      <li>Title bar</li>
-      <li>Quit button</li>
-      <li>Logout button</li>
-      <li>Category button</li>
-      <li>Login form (input fields, labels, submit button</li>
-      <li>Footer (copyright, authors)</li>
-      <li>Username header</li>
-      <li>Avatar</li>
-      <li>Stats list</li>
-      <li>Play Now button</li>
-      <li>To Profile button</li>
-      <li>Question text</li>
-      <li>Answer choice buttons</li>
-      <li>Timer graphic</li>
-      <li>Response text</li>
-      <li>Play Again button</li>
-      <li>Page Not Found text</li>
-    </ul>
+    <section class="notes">
+      <h1>TriviApp is awesome</h1>
+      <h2>Component To-Do List:</h2>
+      <ul>
+        <li>Title bar</li>
+        <li>Username header</li>
+        <li>Avatar</li>
+        <li>Stats list</li>
+        <li>Timer graphic</li>
+        <li>Response text</li>
+        <li>Page Not Found text</li>
+      </ul>
+    </section>
+    <article class="cat-pick">
+      <header>
+        <h1>TriviApp</h1>
+        <h2>mollyfish</h2>
+        <h3>Choose Your Topic:</h3>
+      </header>
+      <section class="cat-card">
+        <ul>
+          <li class="cat-button">History</li>
+          <li class="cat-button">Sports</li>
+          <li class="cat-button">Entertainment</li>
+          <li class="cat-button">Food</li>
+          <li class="cat-button">Science</li>
+          <li class="cat-button">Star Wars</li>
+          <li class="cat-button">Math</li>
+        </ul>
+      </section>
+      <a class="quit-button">Quit</a>
+    </article>
+<br />
     <article class="game-round">
       <header>
         <h1>TriviApp</h1>
@@ -38,7 +50,6 @@
       </header>
       <section class="q-card">
         <h1>Mythology</h1>
-        <!-- <h2>When was Pearl Harbor attacked by the Japanese?</h2> -->
         <h2>Pomegranates are a major feature in the myth of Persophone, wife of _______.</h2>
         <div class="answers">
           <!-- The weird format of line breaks below is to prevent silly gaps between the <a> tags, since they are { display: inline-block }.  Looks weird, but just go with it! -->
@@ -51,12 +62,25 @@
       </section>
       <a class="quit-button">Quit</a>
     </article>
+
     <a class="cat-button">Category Name</a>
+
     <a class="logout-button">Log Out</a>
+
     <a class="quit-button">Quit</a>
+
     <a class="to-profile-button">To Profile</a>
+
     <a class="play-button">Play Now</a>
+
     <a class="play-button">Play Again</a>
+
+
+    <header>
+      <h1>TriviApp</h1>
+      <h2>mollyfish</h2>
+      <h3>Choose Your Topic:</h3>
+    </header>
     
     <form class="login" id="login">
       <fieldset>
@@ -86,7 +110,7 @@
         <li><small>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</small></li>
       </ul>         
     </footer>
-
+<section class="notes">
     <h2>Views:</h2>
     <ul>
       <li>Login screen</li>
@@ -161,7 +185,7 @@
         </ul>
       <li>404 page</li>
     </ul>
-
+</section>
 
   </body>
 </html>
