Add avatar img to header component

--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -26,7 +26,7 @@
     <article class="cat-pick">
       <header>
         <h1>TriviApp</h1>
-        <h2>mollyfish</h2>
+        <figure><img src="temp/reduced.jpg"><figcaption>mollyfish</figcaption></figure>
         <h3>Choose Your Topic:</h3>
       </header>
       <section class="cat-card">
@@ -46,7 +46,8 @@
     <article class="game-round">
       <header>
         <h1>TriviApp</h1>
-        <h2>mollyfish</h2>
+        <figure><img src="temp/reduced.jpg"><figcaption>mollyfish</figcaption></figure>
+        <h3>Choose Your Topic:</h3>
       </header>
       <section class="q-card">
         <h1>Mythology</h1>
@@ -78,8 +79,8 @@
 
     <header>
       <h1>TriviApp</h1>
-      <h2>mollyfish</h2>
-      <h3>Choose Your Topic:</h3>
+      <figure><img src="temp/reduced.jpg"><figcaption>mollyfish</figcaption></figure>
+      <h3>Sub text here:</h3>
     </header>
     
     <form class="login" id="login">
@@ -110,82 +111,81 @@
         <li><small>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</small></li>
       </ul>         
     </footer>
-<section class="notes">
-    <h2>Views:</h2>
-    <ul>
-      <li>Login screen</li>
+    <section class="notes">
+      <h2>Views:</h2>
+      <ul>
+        <li>Login screen</li>
+          <ul>
+            <li>Title</li>
+            <li>Logo?</li>
+            <li>Login form</li>
+            <li>Copyright notice</li>
+            <li>Authors/Devs</li>
+          </ul>
+        <li>User profile</li>
+          <ul>
+            <li>Title</li>
+            <li>Username header</li>
+            <li>Avatar or photo?</li>
+            <li>Stats on right/wrong overall</li>
+            <li>Stats on right/wrong by category</li>
+            <li>Play Now button</li>
+            <li>Logout</li>
+          </ul>
+        <li>Category choices</li>
         <ul>
-          <li>Title</li>
-          <li>Logo?</li>
-          <li>Login form</li>
-          <li>Copyright notice</li>
-          <li>Authors/Devs</li>
-        </ul>
-      <li>User profile</li>
+            <li>Title</li>
+            <li>Clickable category list (w/ animated color schemes in time)</li>
+            <li>Choose how many questions vs continuous</li>
+            <li>Icons for categories?</li>
+            <li>Back to Profile Button</li>
+            <li>Quit</li>
+          </ul>
+        <li>Unanswered question</li>
         <ul>
-          <li>Title</li>
-          <li>Username header</li>
-          <li>Avatar or photo?</li>
-          <li>Stats on right/wrong overall</li>
-          <li>Stats on right/wrong by category</li>
-          <li>Play Now button</li>
-          <li>Logout</li>
-        </ul>
-      <li>Category choices</li>
-      <ul>
-          <li>Title</li>
-          <li>Clickable category list (w/ animated color schemes in time)</li>
-          <li>Choose how many questions vs continuous</li>
-          <li>Icons for categories?</li>
-          <li>Back to Profile Button</li>
-          <li>Quit</li>
-        </ul>
-      <li>Unanswered question</li>
-      <ul>
-          <li>Title</li>
-          <li>Question text</li>
-          <li>Clickable Answers</li>
-          <li>Timer bar/icon</li>
-          <li>Pass option?</li>
-          <li>Quit</li>
-        </ul>
-      <li>No answer response</li>
-      <ul>
-          <li>Title</li>
-          <li>Response message</li>
-          <li>Timed return to category choice?</li>
-          <li>Timed return to next question?</li>
-          <li>Quit</li>
-        </ul>
-      <li>Wrong answer response</li>
-      <ul>
-          <li>Title</li>
-          <li>Response message</li>
-          <li>Timed return to category choice?</li>
-          <li>Timed return to next question?</li>
-          <li>Quit</li>
-        </ul>
-      <li>Correct answer response</li>
-      <ul>
-          <li>Title</li>
-          <li>Response message</li>
-          <li>Timed return to category choice?</li>
-          <li>Timed return to next question?</li>
-          <li>Quit</li>
-        </ul>
-      <li>Session Results?</li>
-      <ul>
-          <li>Title</li>
-          <li>Username</li>
-          <li>Avatar or photo?</li>
-          <li>Stats on right/wrong for the session overall</li>
-          <li>Stats on right/wrong for the session by category</li>
-          <li>Play Again button</li>
-          <li>Quit</li>
-        </ul>
-      <li>404 page</li>
-    </ul>
-</section>
-
+            <li>Title</li>
+            <li>Question text</li>
+            <li>Clickable Answers</li>
+            <li>Timer bar/icon</li>
+            <li>Pass option?</li>
+            <li>Quit</li>
+          </ul>
+        <li>No answer response</li>
+        <ul>
+            <li>Title</li>
+            <li>Response message</li>
+            <li>Timed return to category choice?</li>
+            <li>Timed return to next question?</li>
+            <li>Quit</li>
+          </ul>
+        <li>Wrong answer response</li>
+        <ul>
+            <li>Title</li>
+            <li>Response message</li>
+            <li>Timed return to category choice?</li>
+            <li>Timed return to next question?</li>
+            <li>Quit</li>
+          </ul>
+        <li>Correct answer response</li>
+        <ul>
+            <li>Title</li>
+            <li>Response message</li>
+            <li>Timed return to category choice?</li>
+            <li>Timed return to next question?</li>
+            <li>Quit</li>
+          </ul>
+        <li>Session Results?</li>
+        <ul>
+            <li>Title</li>
+            <li>Username</li>
+            <li>Avatar or photo?</li>
+            <li>Stats on right/wrong for the session overall</li>
+            <li>Stats on right/wrong for the session by category</li>
+            <li>Play Again button</li>
+            <li>Quit</li>
+          </ul>
+        <li>404 page</li>
+      </ul>
+    </section>
   </body>
 </html>
