--- a/app/ls-draft.html
+++ b/app/ls-draft.html
@@ -48,32 +48,46 @@
       </ul>         
     </footer>
    
-   <section class="player-profile">
-    <h1>{{player name}}</h1>
-    <div class="player-portrait">
-      <img>{{pic}}</img>
-    </div>
-    <p>{{other info}}</p>
-    <p>{{other info}}</p>
-    <p>{{other info}}</p>
-    <p>{{other info}}</p>
-    <aside class="player-stat-indicator category-1">
-      <p>{{category}}</p>
-      <p>{{icons}}</p>
+   <article class="player-profile">
+    <aside class="rating-indicator-container left">
+      <div class="rating-indicator category-1">
+        <p>{{category1}}</p>
+        <p>{{icons}}</p>
+      </div>
+      <div class="rating-indicator category-2">
+        <p>{{category2}}</p>
+        <p>{{icons}}</p>
+      </div>
     </aside>
-    <aside class="player-stat-indicator category-2">
-      <p>{{category}}</p>
-      <p>{{icons}}</p>
+    <header>
+      <h1>TriviApp</h1>
+      <figure><img src="temp/reduced.jpg"><figcaption>mollyfish</figcaption></figure>      
+      <h3>{{other info}}</h3>
+      <h3>{{other info}}</h3>
+      <h3>{{other info}}</h3>
+    </header>
+    <aside class="rating-indicator-container right">
+      <div class="rating-indicator category-3">
+        <p>{{category3}}</p>
+        <p>{{icons}}</p>
+      </div>
+      <div class="rating-indicator category-4">
+        <p>{{category4}}</p>
+        <p>{{icons}}</p>
+      </div>
     </aside>
-        <aside class="player-stat-indicator category-3">
-      <p>{{category}}</p>
-      <p>{{icons}}</p>
+  </article>
+
+    <aside class="rating-indicator-container left">
+      <div class="rating-indicator category-1">
+        <p>{{category1}}</p>
+        <p>{{icons}}</p>
+      </div>
+      <div class="rating-indicator category-2">
+        <p>{{category2}}</p>
+        <p>{{icons}}</p>
+      </div>
     </aside>
-    <aside class="player-stat-indicator category-4">
-      <p>{{category}}</p>
-      <p>{{icons}}</p>
-    </aside>
-  </section>
 
     <div class="countdown-timer"></div>
 
