Add logo icon fonts

--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="notes">
-      <h1>TriviApp is awesome</h1>
+      <h1 class="icon-avatar-bw">TriviApp is awesome</h1>
       <h2>Component To-Do List:</h2>
       <ul>
         <li>Title bar</li>
