--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -25,7 +25,7 @@
     </section>
     <article class="login-screen">
       <header>
-        <h1>TriviApp</h1>
+        <h1 class="icon-avatar-bw">TriviApp</h1>
       </header>
       <form class="login" id="login">
         <fieldset>
@@ -35,12 +35,18 @@
           <input class="button" type="submit" value="Let's play"/>
         </fieldset>
       </form>
+      <footer>
+        <ul>
+          <li><small>&copy; Copyright 2015. All Rights Reserved.</small></li>
+          <li><small>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</small></li>
+        </ul>         
+      </footer>
     </article>
     <br />
     <article class="cat-pick">
       <header>
         <h1 class="icon-avatar-bw">TriviApp</h1>
-        <figure><img src="temp/reduced.jpg"><figcaption>mollyfish</figcaption></figure>
+        <figure><img src="temp/avatar2.svg"><figcaption>mollyfish</figcaption></figure>
         <h3>Choose Your Topic:</h3>
       </header>
       <section class="cat-card">
@@ -55,13 +61,18 @@
         </ul>
       </section>
       <a class="quit-button">Quit</a>
+      <footer>
+        <ul>
+          <li><small>&copy; Copyright 2015. All Rights Reserved.</small></li>
+          <li><small>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</small></li>
+        </ul>         
+      </footer>
     </article>
     <br />
     <article class="game-round">
       <header>
         <h1 class="icon-avatar-bw">TriviApp</h1>
-        <figure><img src="temp/yellow-avatar.svg"><figcaption>mollyfish</figcaption></figure>
-        <h3>Choose Your Topic:</h3>
+        <figure><img src="temp/avatar1.svg"><figcaption>mollyfish</figcaption></figure>
       </header>
       <section class="q-card">
         <h1>Mythology</h1>
@@ -80,8 +91,8 @@
     <br />
     <article class="game-round">
       <header>
-        <h1>TriviApp</h1>
-        <figure><img src="temp/reduced.jpg"><figcaption>mollyfish</figcaption></figure>
+        <h1 class="icon-avatar-bw">TriviApp</h1>
+        <figure><img src="temp/avatar6.svg"><figcaption>mollyfish</figcaption></figure>
       </header>
       <section class="a-card correct">
         <h1>Mythology</h1>
@@ -100,8 +111,8 @@
     <br />
     <article class="game-round">
       <header>
-        <h1>TriviApp</h1>
-        <figure><img src="temp/reduced.jpg"><figcaption>mollyfish</figcaption></figure>
+        <h1 class="icon-avatar-bw">TriviApp</h1>
+        <figure><img src="temp/avatar5.svg"><figcaption>mollyfish</figcaption></figure>
       </header>
       <section class="a-card wrong">
         <h1>Mythology</h1>
@@ -130,10 +141,9 @@
 
     <a class="play-button">Play Again</a>
 
-
     <header>
       <h1 class="icon-avatar-bw">TriviApp</h1>
-      <figure><img src="temp/green-avatar.svg"><figcaption>mollyfish</figcaption></figure>
+      <figure><img src="temp/avatar4.svg"><figcaption>mollyfish</figcaption></figure>
       <h3>Sub text here:</h3>
     </header>
     
@@ -161,7 +171,7 @@
 
     <footer>
       <ul>
-        <li><small>&#64; Copyright 2015. All Rights Reserved.</small></li>
+        <li><small>&copy; Copyright 2015. All Rights Reserved.</small></li>
         <li><small>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</small></li>
       </ul>         
     </footer>
