Build component library from MK and LCS draft pages

--- a/app/ls-draft.html
+++ b/app/ls-draft.html
@@ -48,7 +48,7 @@
       </ul>         
     </footer>
    
-   <article class="player-profile">
+  <article class="player-profile">
     <aside class="rating-indicator-container left">
       <div class="rating-indicator category-1 slide-in-left">
         <p>History</p>
@@ -63,13 +63,13 @@
         <p></p>
       </div>
     </aside>
-    <header>
+    <section>
       <h1>TriviApp</h1>
       <figure><img src="temp/reduced.jpg"><figcaption>mollyfish</figcaption></figure>      
       <h3>{{other info}}</h3>
       <h3>{{other info}}</h3>
       <h3>{{other info}}</h3>
-    </header>
+    </section>
     <aside class="rating-indicator-container right">
       <div class="rating-indicator category-4 slide-in-left">
         <p>Entertainment</p>
