--- a/app/component-library.html
+++ b/app/component-library.html
@@ -174,6 +174,7 @@
       <a class="logout-button">Log Out</a>
       <a class="quit-button">Quit</a>
       <a class="to-profile-button">To Profile</a>
+      <a class="challenge-button">Challenge</a>
     </section>
 
     
