--- a/app/ls-draft.html
+++ b/app/ls-draft.html
@@ -32,6 +32,61 @@
       <li>Page Not Found text</li>
     </ul>
 
+    <section class="component">
+      <h1 class="notes">Opponent list:</h1>
+      <section class="opponents-card">
+        <ul>
+          <li class="individual-opponent-console">
+            <figure><img src="temp/avatar1.svg"><figcaption>Jose</figcaption></figure>
+            <div class="stats">      
+              <h2>{{Ranking}}</h2>
+              <h2>{{Last login}}</h2>
+            </div>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>
+          <li class="individual-opponent-console">
+            <figure><img src="temp/avatar2.svg"><figcaption>Hepzebiah</figcaption></figure>
+            <div class="stats">      
+              <h2>{{Ranking}}</h2>
+              <h2>{{Last login}}</h2>
+            </div>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>
+          <li class="individual-opponent-console">
+            <figure><img src="temp/avatar3.svg"><figcaption>Donald</figcaption></figure>      
+            <h3>{{Ranking}}</h3>
+            <h3>{{Last login}}</h3>
+          </li>          
+          <li class="individual-opponent-console">
+            <figure><img src="temp/avatar4.svg"><figcaption>Groober</figcaption></figure>      
+            <h3>{{Ranking}}</h3>
+            <h3>{{Last login}}</h3>
+          </li>
+          <li class="opponent">
+            <figure><img src="temp/avatar1.svg"><figcaption>Diggity</figcaption></figure>      
+            <h3>{{Ranking}}</h3>
+            <h3>{{Last login}}</h3>
+          </li>
+          <li class="opponent">
+            <figure><img src="temp/avatar6.svg"><figcaption>Susan</figcaption></figure>      
+            <h3>{{Ranking}}</h3>
+            <h3>{{Last login}}</h3>
+          <li class="opponent">
+            <figure><img src="temp/avatar2.svg"><figcaption>PunkyEliteTrivaWhizzer</figcaption></figure>      
+            <h3>{{Ranking}}</h3>
+            <h3>{{Last login}}</h3>
+          </li>
+        </ul>
+      </section>
+    </section>
+
+
     <form class="login" id="login">
       <fieldset class="slide-in-down">
         <legend>Login</legend>
