--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -204,6 +204,32 @@
         <a class="to-profile-button">Profile</a>
       </div>
     </article>
+
+    <article class="game-pick">
+      <header>
+        <h1 class="icon-avatar-bw">TriviApp</h1>
+        <figure><img src="temp/avatar2.svg"><figcaption>mollyfish</figcaption></figure>
+      </header>
+      <section class="games-card">
+        <h1>Open Games</h1>
+        <ul class="open-games">
+          <li class="cat-button">v. Goober (History, rnd 1)</li>
+          <li class="cat-button">v. Donald (Sports, rnd 3)</li>
+        </ul>
+        <h1>Closed Games</h1>
+        <ul class="closed-games">
+          <li class="cat-button won">v. Donald (Sports, rnd 2)</li>
+          <li class="cat-button lost">v. Donald (Sports, rnd 1)</li>
+        </ul>
+      </section>
+      <a class="quit-button">Quit</a>
+      <footer>
+        <ul>
+          <li><small>&copy; Copyright 2015. All Rights Reserved.</small></li>
+          <li><small>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</small></li>
+        </ul>         
+      </footer>
+    </article>
     
     <footer>
       <ul>
