--- a/app/component-library.html
+++ b/app/component-library.html
@@ -165,7 +165,65 @@
       </section>
     </section>
 
-    
+
+
+    <section class="component">
+      <h1 class="notes">Opponent list:</h1>
+      <section>
+        <ul class="opponents-card">
+          <li class="individual-opponent-console">
+            <h1>Jose</h1>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>
+          <li class="individual-opponent-console">
+            <h1>Hepzebiah</h1>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>
+          <li class="individual-opponent-console">
+            <h1>Donald</h1>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>  
+          <li class="individual-opponent-console">
+            <h1>Groober</h1>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>
+          <li class="individual-opponent-console">
+            <h1>Diggity</h1>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>
+          <li class="individual-opponent-console">
+            <h1>Susan</h1>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>
+          <li class="individual-opponent-console">
+            <h1>MadEliteTriviaSkillz</h1>
+            <div class="controls">
+              <a class="opponent-profile-button">View Profile</a>
+              <a class="challenge-button">Challenge</a>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </section>
+
 
     <section class="component">
       <h1 class="notes">Buttons:</h1>
