Build game list view

--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -199,7 +199,7 @@
         </ul>
       </section>
       <a class="play-button">Play Again</a>
-      <div class="two-button-wrap">
+      <div class="button-wrap">
         <a class="logout-button">Log Out</a>
         <a class="to-profile-button">Profile</a>
       </div>
@@ -211,24 +211,34 @@
         <figure><img src="temp/avatar2.svg"><figcaption>mollyfish</figcaption></figure>
       </header>
       <section class="games-card">
-        <h1>Open Games</h1>
+        <h2>Open Games</h2>
         <ul class="open-games">
-          <li class="cat-button">v. Goober (History, rnd 1)</li>
-          <li class="cat-button">v. Donald (Sports, rnd 3)</li>
+          <li class="big-button">v. Goober (History, rnd 1)</li>
+          <li class="big-button">v. Donald (Sports, rnd 6)</li>
+          <li class="big-button">v. Donald (Sports, rnd 5)</li>
+          <li class="big-button">v. Donald (Sports, rnd 4)</li>
+          <li class="big-button">v. Donald (Sports, rnd 3)</li>
         </ul>
-        <h1>Closed Games</h1>
+        <div class="button-wrap">
+          <a class="small-button prev" href="#">« Prev</a>...
+          <a class="small-button current" href="#">3</a>...
+          <a class="small-button next" href="#">Next »</a>
+        </div>
+        <!-- <h2>Closed Games</h2>
         <ul class="closed-games">
-          <li class="cat-button won">v. Donald (Sports, rnd 2)</li>
-          <li class="cat-button lost">v. Donald (Sports, rnd 1)</li>
+          <li class="big-button won">Win v. Goober (Sports, rnd 3)</li>
+          <li class="big-button lost">Loss v. Goober (Sports, rnd 2)</li>
+          <li class="big-button won">Win v. Donald (Sports, rnd 2)</li>
+          <li class="big-button lost">Loss v. Goober (Sports, rnd 1)</li>
+          <li class="big-button lost">Loss v. Donald (Sports, rnd 1)</li>
         </ul>
+        <div class="button-wrap">
+          <a class="small-button prev" href="#">« Prev</a>...
+          <a class="small-button current" href="#">1</a>...
+          <a class="small-button next" href="#">Next »</a>
+        </div> -->
       </section>
       <a class="quit-button">Quit</a>
-      <footer>
-        <ul>
-          <li><small>&copy; Copyright 2015. All Rights Reserved.</small></li>
-          <li><small>Molly Kent, Clare Monahan, Will Schull, Monica Wu, Lyle Charles Scott</small></li>
-        </ul>         
-      </footer>
     </article>
     
     <footer>
