refactor button code in sass

--- a/app/component-library.html
+++ b/app/component-library.html
@@ -174,49 +174,49 @@
           <li class="individual-opponent-console">
             <h1>Jose</h1>
             <div class="controls">
-              <a class="opponent-profile-button">View Profile</a>
+              <a class="opponent-profile-button">Profile</a>
               <a class="challenge-button">Challenge</a>
             </div>
           </li>
           <li class="individual-opponent-console">
             <h1>Hepzebiah</h1>
             <div class="controls">
-              <a class="opponent-profile-button">View Profile</a>
+              <a class="opponent-profile-button">Profile</a>
               <a class="challenge-button">Challenge</a>
             </div>
           </li>
           <li class="individual-opponent-console">
             <h1>Donald</h1>
             <div class="controls">
-              <a class="opponent-profile-button">View Profile</a>
+              <a class="opponent-profile-button">Profile</a>
               <a class="challenge-button">Challenge</a>
             </div>
           </li>  
           <li class="individual-opponent-console">
             <h1>Groober</h1>
             <div class="controls">
-              <a class="opponent-profile-button">View Profile</a>
+              <a class="opponent-profile-button">Profile</a>
               <a class="challenge-button">Challenge</a>
             </div>
           </li>
           <li class="individual-opponent-console">
             <h1>Diggity</h1>
             <div class="controls">
-              <a class="opponent-profile-button">View Profile</a>
+              <a class="opponent-profile-button">Profile</a>
               <a class="challenge-button">Challenge</a>
             </div>
           </li>
           <li class="individual-opponent-console">
             <h1>Susan</h1>
             <div class="controls">
-              <a class="opponent-profile-button">View Profile</a>
+              <a class="opponent-profile-button">Profile</a>
               <a class="challenge-button">Challenge</a>
             </div>
           </li>
           <li class="individual-opponent-console">
             <h1>MadEliteTriviaSkillz</h1>
             <div class="controls">
-              <a class="opponent-profile-button">View Profile</a>
+              <a class="opponent-profile-button">Profile</a>
               <a class="challenge-button">Challenge</a>
             </div>
           </li>
