--- a/app/ls-draft.html
+++ b/app/ls-draft.html
@@ -97,6 +97,43 @@
       </section>
     </section>
 
+    <section class="score-card">
+      <h1>Entertainment Score</h1>
+      <!-- <h2 class="star one"></h2> -->
+      <h2 class="star two"></h2>
+      <!-- <h2 class="star three"></h2> -->
+      <!-- <h2 class="star four"></h2> -->
+      <!-- <h2 class="star five"></h2> -->
+      <p class="score">2 correct of 5</p>
+      <ul>
+        <li>
+          <p class="question">What year did World War II end?</p>
+          <p class="guess">You guessed: 1941</p>
+          <p class="answer">Correct answer: 1945</p>
+        </li>
+        <!-- <li>
+          <p class="question">John, Paul, George, and Ringo were in a band called ______.</p>
+          <p class="guess">You guessed: The Who</p>
+          <p class="answer">Correct answer: The Beatles</p>
+        </li> -->
+        <li>
+          <p class="question">Who was the first man to walk on the moon?</p>
+          <p class="guess">You guessed: Louis Armstrong</p>
+          <p class="answer">Correct answer: Neil Armstrong</p>
+        </li>
+        <!-- <li>
+          <p class="question">A tomato is ______.</p>
+          <p class="guess">You guessed: a legume</p>
+          <p class="answer">Correct answer: a fruit</p>
+        </li> -->
+        <li>
+          <p class="question">Pomegranates are a major feature in the myth of Persephone, wife of _______.</p>
+          <p class="guess">You guessed: Zeus</p>
+          <p class="answer">Correct answer: Hades</p>
+        </li>
+      </ul>
+    </section>
+
 
     <form class="login" id="login">
       <fieldset class="slide-in-down">
