WIP add new user to login view

--- a/app/ls-draft.html
+++ b/app/ls-draft.html
@@ -135,14 +135,25 @@
     </section>
 
 
-    <form class="login" id="login">
-      <fieldset class="slide-in-down">
-        <legend>Login</legend>
-        <input name="username" type="text" placeholder="username"/>
-        <input name="password" type="text" placeholder="password"/>
-        <input class="button" type="submit" value="Let's play"/>
-      </fieldset>
-    </form>
+    <section class="component">
+      <h1 class="notes">Login form:</h1>
+      <form class="login" id="login">
+        <fieldset class="slide-in-down">
+          <legend>Login</legend>
+          <input name="username" type="text" placeholder="username"/>
+          <input name="password" type="text" placeholder="password"/>
+          <input class="button" type="submit" value="Let's play"/>
+        </fieldset>
+      </form>
+      <form class="login" id="login">
+        <fieldset class="slide-in-down">
+          <legend>Login</legend>
+          <input name="username" type="text" placeholder="username"/>
+          <input name="password" type="text" placeholder="password"/>
+          <input class="button" type="submit" value="Let's play"/>
+        </fieldset>
+      </form>
+    </section>
 
     <footer>
       <ul>
