--- a/app/component-library.html
+++ b/app/component-library.html
@@ -46,15 +46,15 @@
     <section class="component">
       <h1 class="notes">User stat graphic (top):</h1>
       <aside class="rating-indicator-container right">
-        <div class="rating-indicator category-4 slide-in-left">
+        <div class="rank-indicator category-4 slide-in-left">
           <p>Entertainment</p>
           <p></p>
         </div>
-        <div class="rating-indicator category-5 slide-in-up">
+        <div class="rank-indicator category-5 slide-in-up">
           <p>Food</p>
           <p></p>
         </div>
-        <div class="rating-indicator category-6 slide-in-right">
+        <div class="rank-indicator category-6 slide-in-right">
           <p>Sports</p>
           <p></p>
         </div>
@@ -64,15 +64,15 @@
     <section class="component">
       <h1 class="notes">User stat graphic (bottom):</h1>
       <aside class="rating-indicator-container left">
-        <div class="rating-indicator category-1 slide-in-left">
+        <div class="rank-indicator category-1 slide-in-left">
           <p>History</p>
           <p></p>
         </div>
-        <div class="rating-indicator category-2 slide-in-down">
+        <div class="rank-indicator category-2 slide-in-down">
           <p>Sports</p>
           <p></p>
         </div>
-        <div class="rating-indicator category-3 slide-in-right">
+        <div class="rank-indicator category-3 slide-in-right">
           <p>Sports</p>
           <p></p>
         </div>
