--- a/app/component-library.html
+++ b/app/component-library.html
@@ -31,6 +31,58 @@
         </fieldset>
       </form>
     </section>
+    <section class="component">
+      <form class="login slide-in-up" id="login">
+        <fieldset>
+          <legend>New User</legend>
+          <input name="username" type="text" placeholder="username"/>
+          <input name="password" type="text" placeholder="password"/>
+          <input name="password" type="text" placeholder="re-enter password"/>
+          <fieldset class="user-avatar-selector">
+            <legend>Select your avatar</legend>
+            <ul>
+              <li class="slide-in-right">
+                <input name="avatar" type="radio" value="red"/>
+                <label>
+                  <img src="temp/avatar1.svg">
+                </label>
+              </li>
+              <li class="slide-in-left">
+                <input name="avatar" type="radio" value="orange"/>
+                <label>
+                  <img src="temp/avatar2.svg">
+                </label>
+              </li>
+              <li class="slide-in-right">
+                <input name="avatar" type="radio" value="yellow"/>
+                <label>
+                  <img src="temp/avatar3.svg">
+                </label>
+              </li>
+              <li class="slide-in-left">
+                <input name="avatar" type="radio" value="green"/>
+                <label>
+                  <img src="temp/avatar4.svg">
+                </label>
+              </li>
+              <li class="slide-in-right">
+                <input name="avatar" type="radio" value="purple"/>
+                <label>
+                  <img src="temp/avatar6.svg">
+                </label>
+              </li>
+              <li class="slide-in-left">
+                <input name="avatar" type="radio" value="pink"/>
+                <label>
+                  <img src="temp/avatar7.svg">
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <input class="button" type="submit" value="New Player"/>
+        </fieldset>
+      </form>
+    </section>
 
     <section class="component">
       <h1 class="notes">User profile card:</h1>
