Add starbar icon to fonts, build starbar percentage icon

--- a/app/mk-draft.html
+++ b/app/mk-draft.html
@@ -164,6 +164,7 @@
       </header>
       <section class="score-card">
         <h1>Entertainment Score</h1>
+        <!-- <h2 class="star zero"></h2> -->
         <!-- <h2 class="star one"></h2> -->
         <h2 class="star two"></h2>
         <!-- <h2 class="star three"></h2> -->
@@ -239,6 +240,10 @@
         </div> -->
       </section>
       <a class="quit-button">Quit</a>
+    </article>
+
+    <article>
+      <progress value="70" max="100" class="icon-starbar"></progress>
     </article>
     
     <footer>
